# ACTWebSocketOverlay

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  conanfile.txt  configure.bat  configure_nonssl.bat  lua_gen.bat  patch_gen.py  reshade.bat
docs/Installation/: Installation.md  installation.md
prebuilt/: init_prebuilt.py
resource/: overlay_atlas.json
sample_scripts/: readme.md  render.lua  script.json  script.lua
src/: CMakeLists.txt  mod.h  rev.py
src/awio/: AWIOOverlay.cpp  AWIOOverlay.h  CMakeLists.txt  OverlayContext.h  OverlayContextBase.cpp  OverlayContextBase.h  OverlayContextLua.cpp  OverlayContextLua.h  OverlayMain.cpp  OverlayMain.h  Preference.cpp  Preference.h  Resource.rc  Serializable.cpp  Serializable.h  Table.cpp  Table.h  empty.cpp  imgui_iterator.cpp  imgui_lua.cpp  imgui_lua.h  licenses.h  loader.cpp  main.cpp  main_dx9.cpp  overlay.cpp  overlay.def  sandbox.cpp  version.h  version.h.in  websocket.h
test/: config.bat.in  test.bat  test.lua  test_32.bat  test_64.bat
textures/: gen_atlas.bat
